# sbom-to-libyear

./: CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docker-build-push.yml
output/: report-test.json  report.json
sample-sboms/: pip.cdx.json
sbom_libyear/: __init__.py  __main__.py
sbom_libyear/core/: __init__.py  calculator.py  registry_manager.py
sbom_libyear/models/: __init__.py  component.py  libyear_report.py  libyear_result.py  repository_config.py
sbom_libyear/parsers/: __init__.py  base.py  cyclonedx_json.py  cyclonedx_xml.py  parser_context.py  spdx_json.py
sbom_libyear/registries/: __init__.py  base.py  factory.py  maven.py  npm.py  nuget.py  pypi.py
sbom_libyear/reports/: __init__.py  base.py  json_report.py  text_report.py
sbom_libyear/utils/: __init__.py  config_loader.py  http_client.py
